#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "mock-apis"
version = "0.1.1"
authors = ["Ritesh Ghorse <riteshghorse@gmail.com>, Damon Douglas <>"]
license = "Apache-2.0"
description = ""
readme = "README.md"
packages = [
    { include = "src/main/python/"}
]

[tool.poetry.dependencies]
python = "^3.8"
google = "^3.0.0"
grpcio = "^1.53.0"
grpcio-tools = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
